# iers2010

./: .gitignore  .travis.yml  ARG2.F  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.conf  Makefile.in  NEWS  README  README.md  SConstruct  autogen.sh  blq  configure  configure.ac  configure.sh  crefs.bib  doxy.conf  iersConfig.cmake  install_setup.py  make_test.py  noauto.Makefile  plot_eops.py  readme.  run_fortran_checks.py  run_sofa_checks.py  run_test_suite.py  tables52ab.py  todo  user_guide.txt
alternatives/: Makefile.am  Makefile.in  compile.sh  dehanttideinel.cpp  gmf.cpp  gpt.cpp  main.cpp  shclass.cpp  shclass.hpp
alternatives/ch5/: SConstruct  build.sh  c2ixys.cpp  c2t.cpp  eect00.cpp  era00.cpp  gsatpos.py  iau.hpp  iersc.hpp  nut00a.cpp  pfw06.cpp  pn06.cpp  rotation_matrix_3.cpp  s06.cpp  sofa_examples.cpp  test_t2c.cc  xy06.cpp
alternatives/gpt3/: compare_gpt3_results.py  compare_vmf3_results.py
alternatives/oldmakes/: src-Makefile.am  src-Makefile.in  test-Makefile.am  test-Makefile.in  top-Makefile.in
doc/: Doxyfile-html  Doxyfile-html.in  Doxyfile-man  Doxyfile-man.in  Doxyfile.in  Makefile.am  crefs.bib  doxy.conf
doc/docbook/: ch01.html  ch01s02.html  ch01s03.html  ch02.html  ch02s02.html  ch02s03.html  ch02s04.html  ch02s05.html  ch03.html  ch03s02.html  ch03s03.html  ch04.html  ch04s02.html  ch04s03.html  ch04s04.html  ch05.html  ch06.html  ch07.html  ch08.html  howto  index.html  libiers10-chap-01.xml  libiers10-chap-02.xml  libiers10-chap-03.xml  libiers10-chap-04.xml  libiers10-chap-05.xml  libiers10-main.xml  pr01.html  pr01s02.html  pr01s03.html  pr01s04.html  pr01s05.html  pr01s06.html  pr02.html
doc/document/: StokesCoeffsCompactRepresentation  doris.bib  eop_interpolation.pgf  eop_variations.pgf  handling_eop.tex  makedoc.sh  report.tex
doc/html/: admint_8cpp.html  admint_8cpp_source.html  arg2_8cpp.html  arg2_8cpp_source.html  cal2jd_8cpp.html  cal2jd_8cpp_source.html  dat_8cpp.html  dat_8cpp_source.html  dehanttideinel_8cpp.html  dehanttideinel_8cpp_source.html  dehanttideinel_8hpp.html  dehanttideinel_8hpp_source.html  dir_1f23c700050e5b2045eb788a744eb714.html  dir_6cf5dde2c9b61a6168751624151b6eb2.html  dir_df511e5bd85cec96854b39d5e1c27aa8.html  etutc_8cpp.html  etutc_8cpp_source.html  eval_8cpp.html  eval_8cpp_source.html  fcnnut_8cpp.html  fcnnut_8cpp_source.html  files.html  fundarg_8cpp.html  fundarg_8cpp_source.html  globals.html  globals_func.html  hardisp_8cpp.html  hardisp_8cpp_source.html  hardisp_8hpp.html  hardisp_8hpp_source.html  iers2010_8hpp.html  iers2010_8hpp_source.html  index.html  namespaceiers2010.html  namespaceiers2010_1_1dtel.html  namespaceiers2010_1_1hisp.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html  (+27 more)
doc/ref_guide/: libiers10-chap-01.xml  libiers10-main.xml
doc/validation/: costg_comparisson.html  createCsv.sh
doc/xml/: dtd5.0-log  libiers10-chap-01.xml  libiers10-chap-02.xml  libiers10-chap-03.xml  libiers10-chap-04.xml  libiers10-chap-05.xml  libiers10-main.xml
src/: Makefile  Makefile.am  Makefile.am.debug  Makefile.am.production  Makefile.in  admint.cpp  almost_inline.cpp  aod1b.hpp  aod1b_data_stream.hpp  apg.cpp  arg2.cpp  asknewet.cpp  atmospheric_tides.hpp  blqstrm.cpp  blqstrm.hpp  cal2jd.cpp  cel2ter.cpp  cel2ter.hpp  clock.hpp  cnmtx.cpp  coeff_matrix_2d.hpp  coeff_matrix_storage.hpp  cspline.cpp  cspline.hpp  dat.cpp  dehanttideinel.cpp  dehanttideinel.cpp.deprecated  dehanttideinel.hpp  dehanttideinel.hpp.deprecated  dehanttideinel_utc.hpp  doodson.cpp  doodson.hpp  earth_rotation.hpp  eop.hpp  etutc.cpp  eval.cpp  fcn.hpp  fcnnut.cpp  fcnnut2.cpp  fcul_a.cpp  (+68 more)
src/aod1b/: aod1b.cpp  aod1b_collect_coeffs.cpp  aod1b_get_tidal_wave.cpp  aod1b_goto_next_block.cpp  aod1b_parse_data_block_header.cpp  aod1b_read_header.cpp  aod1b_skip_header.cpp  linear_interpolate_coeffs.py  parse_block_header.cpp  skip_header.cpp
src/atmospheric_tides/: atm_from_groops.cpp  atm_tides.cpp  atm_tides_append_wave.cpp  atm_tides_geopotential.cpp
src/ch10/: relativity.cpp
src/ch5/: compute_fargs.cpp  fcnnut.cpp  fundarg.cpp  pmsdnut2.cpp  utlibr.cpp
src/ch7/: arg2.cpp
src/ch8/: cnmtx.cpp  cnmtx2.cpp  ortho_eop.cpp  rg_zont2.cpp
src/ch9/: fcul_b.cpp  gmf.cpp  gpt2.cpp
src/dehanttideinel/: dehanttide_all.cpp  dehanttideinel.hpp  st1idiu.cpp  st1isem.cpp  st1l1.cpp
src/doodson/: doodson.cpp  doodson_from_chars.cpp  doodson_to_str.cpp  match_tadal_constituents.cpp  resolve_iers2010_doodson_string.cpp  tidal_wave_tables.cpp
src/earth_rotation/: earth_rotation.cpp  eops_at.cpp  icrs2itrs_implementation.cpp  itrs2gcrs_quaternion.cpp
src/eop/: approx_dut1.cpp  chose_c04_series.cpp  dutToUt1Tai.cpp  eop_lut.cpp  eop_utc2tt.cpp  interpolate.cpp  lagrange_interpolation.cpp  lagrange_interpolation2.cpp  libration.cpp  ocean_tide_variation.cpp  parseC0414.cpp  parseC0420.cpp  parse_iers_c0414.cpp  parse_iers_c0420.cpp  parse_iersc0420.cpp  regularize.cpp  utlod_libration.cpp  utlod_oceantide.cpp  xy_libration.cpp  xy_oceantides.cpp
src/free_core_nutation/: lambert.cpp  load_iers10_table52c.cpp  parse_lambert_coeffs.cpp  readme.md
src/fundarg/: fundarg.cpp
src/gravity/: LegendrePolinomials.cpp  associated_legendre_polynomials.cpp  forward_column_alf.cpp  holmes.cpp  modified_forward_column_alf.cpp  point_mass_acceleration.cpp  sh_cunningham_normalized_gradient.cpp
src/hardisp/: admint.cpp  etutc.cpp  eval.cpp  (+6 more)
test/: APG.F  GPT2.F  Makefile  Makefile.am  Makefile.am.debug  Makefile.am.production  Makefile.in  gpt2.m  gpt2_test.m  gpt2test.cpp  hardisp_results_onsa  hardisp_results_reyk  readme.md  reyk.blq  sofa_examples.cpp  test-hardisp.cpp  test.cpp  test_arg2.cpp  test_blq.cpp  test_c2t06a.cpp  test_cnmtx.cpp  test_cnmtx_random.cpp  test_dehanttd.cpp  test_dehanttideinel.cpp  test_fcnnut.cpp  test_fcula.cpp  test_fculb.cpp  test_fculzdhpa.cpp  test_fundarg.cpp  test_gmf.cpp  test_gpt.cpp  test_gpt2.cpp  test_gpt3.cpp  test_gpt31.cpp  test_gpt35.cpp  test_hardisp.cpp  test_help.hpp  test_iers2010.cpp  test_iers2010.cpp.am  test_interpf.cpp  (+21 more)
(+583 files in other folders)
